Java 11 - without modules